# portfolioOptimizator

./: CONTEXT.md  README.md  pyproject.toml
Notebooks/: 01_Risk_Analysis.ipynb  02_Portfolio_Optimization.ipynb  03_Risk_Assessment.ipynb
assets/: asset_manager.py
assets/Bonds/: us_treasuries.yml
assets/ETFs/: etfs_2026_17_1.yml
assets/Stocks/: tech_stocks.yml
optimizator/: data_loader.py  engine.py
risk/: risk_metrics.py  risk_profile.py
